--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <audio id="bgMusic" autoplay loop>
+    <audio id="bgMusic" loop>
       <source src="die-with-smile.mp3" type="audio/mpeg" />
       Your browser does not support the audio element.
     </audio>
@@ -15,14 +15,15 @@
     <div class="intro" id="introText">
       i hope you read this, when you need someone to talk.
     </div>
+
     <button class="btn" onclick="showLetter()">Read it</button>
 
-    <div class="letter" id="letterBox">
+    <div class="letter" id="letterBox" style="display: none;">
       <p id="typedText"></p>
       <img src="ttd.png" alt="Signature" class="signature" />
 
-      <!-- Tombol WhatsApp -->
-      <a href="https://wa.me/6285718993124" target="_blank" class="wa-button"> klik disini buat contact aku</a>
+      <!-- Tombol Instagram -->
+      <a href="https://instagram.com/jstmannn" target="_blank" class="wa-button"> klik disini buat contact aku</a>
     </div>
 
     <!-- Footer -->
@@ -30,6 +31,7 @@
       @2025, Created for Nita. from Jstmann.
     </footer>
 
-    <script src="script.js"></script>
+   
   </body>
 </html>
+
