--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
     <div class="intro" id="introText">
       i hope you read this, when you need someone to talk.
     </div>
-
     <button class="btn" onclick="showLetter()">Read it</button>
 
-    <div class="letter" id="letterBox" style="display: none;">
+    <div class="letter" id="letterBox">
       <p id="typedText"></p>
       <img src="ttd.png" alt="Signature" class="signature" />
 
-      <!-- Tombol Instagram -->
+      <!-- Tombol WhatsApp -->
       <a href="https://instagram.com/jstmannn" target="_blank" class="wa-button"> klik disini buat contact aku</a>
     </div>
 
@@ -31,7 +30,5 @@
       @2025, Created for Nita. from Jstmann.
     </footer>
 
-   
+    <script src="script.js"></script>
   </body>
-</html>
-
